@@ -43,6 +43,8 @@ documents those changes that are of interest to users and administrators.
  -- Only send the batch node in the step_hostlist in the job credential.
  -- When setting affinity for the batch step don't assume the batch host is node
     0.
+ -- In task/affinity better checking for node existence when laying out
+    affinity.
 
 * Changes in Slurm 21.08.0
 ==========================
